estilos formulario pasaje

--- a/SolBusGrupo15Laboratorio/src/vistas/Menu.form
+++ b/SolBusGrupo15Laboratorio/src/vistas/Menu.form
@@ -124,6 +124,10 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JDesktopPane" name="JDPEscritorio">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JDesktopPane(){&#xa;    public void paintComponent(Graphics g){&#xa;        g.drawImage(image,0,0,getWidth(),getHeight(),this);&#xa;    }&#xa;}"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="ImageIcon icono=new ImageIcon(getClass().getResource(&quot;/imagenes/sol-min.jpg&quot;));&#xa;Image image=icono.getImage();"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
