--- a/SolBusGrupo15Laboratorio/src/vistas/CompraPasaje.form
+++ b/SolBusGrupo15Laboratorio/src/vistas/CompraPasaje.form
@@ -469,8 +469,8 @@
                 <Column editable="true" title="Colectivo" type="java.lang.Object"/>
                 <Column editable="true" title="Ruta" type="java.lang.Object"/>
                 <Column editable="true" title="Fecha" type="java.lang.Object"/>
-                <Column editable="true" title="HSalida" type="java.lang.Object"/>
-                <Column editable="true" title="HLlegada" type="java.lang.Object"/>
+                <Column editable="true" title="Hora" type="java.lang.Object"/>
+                <Column editable="true" title="Asiento" type="java.lang.Object"/>
                 <Column editable="true" title="Estado" type="java.lang.Object"/>
               </Table>
             </Property>
