--- a/SolBusGrupo15Laboratorio/src/vistas/GestionColectivo.form
+++ b/SolBusGrupo15Laboratorio/src/vistas/GestionColectivo.form
@@ -141,9 +141,9 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jrbEstado" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jbGuardar" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbNuevo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbNuevo" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
               </Group>
@@ -461,10 +461,8 @@
                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jBListaColectivos" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jBLimpiar2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jBListaColectivos" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jBLimpiar2" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="208" max="-2" attributes="0"/>
