--- a/SolBusGrupo15Laboratorio/src/vistas/CompraPasaje.form
+++ b/SolBusGrupo15Laboratorio/src/vistas/CompraPasaje.form
@@ -349,7 +349,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="DNI"/>
+            <Property name="text" type="java.lang.String" value="DNI:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
